# Ming-Agent

./: .gitignore  PLAN.md  README.md  pyproject.toml
config/: default.yaml
docs/: experience-scenarios.md
docs/superpowers/plans/: 2026-06-13-pc-web-ui-sse-plan.md
src/ming/: __init__.py  __main__.py  cli.py  config.py
src/ming/context/: assembler.py  manager.py  session_memory.py
src/ming/core/: adversarial.py  agent.py  automaticity.py  cognitive_router.py  dream.py  gate.py  live_events.py  llm.py  loop_detection.py  notepad.py  permission.py  progress.py  recovery.py  session_trace.py  todo.py  tool_selection.py  trace.py
src/ming/eval/: __init__.py  cost.py  fingerprint.py  golden.py  judges.py
src/ming/memory/: experience.py  store.py
src/ming/skills/: __init__.py  index.py
src/ming/tools/: base.py  bash.py  file.py  web.py
src/ming/ui/: __init__.py  chat_runtime.py  trace_console.py
tests/: test_agent_pipeline.py  test_chat_runtime.py  test_cli.py  test_cognitive_router.py  test_context_management.py  test_dream.py  test_experience.py  test_harness_features.py  test_live_events.py  test_llm_fallback.py  test_progress.py  test_remaining_plan.py  test_testing_architecture.py  test_tools.py  test_trace_console.py  test_web_tools.py  test_workbench_design.py
